--- a/javascript.html
+++ b/javascript.html
@@ -1,83 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>title</title>
-	<meta charset="utf-8">
-	<style type="text/css">
-		#resultBox{
-			border: 5px solid red;
-			padding: 50px;
-			margin: 25px;
-			margin-right: 50px;
-			margin-left: 50px;
-			text-align: center;
-		}
-	</style>
+    <title>title</title>
+    <meta charset="utf-8">
+    <style type="text/css">
+        #resultBox {
+            border: 5px solid red;
+            padding: 50px;
+            margin: 25px;
+            margin-right: 50px;
+            margin-left: 50px;
+            text-align: center;
+        }
 
-		<script type="text/javascript">
-		var gambling = {
-			counter : 0,
-			counter1 : 0,
-			counter2 : 0,
+        #clickBox {
+            border: 2px solid pink;
+            padding: 5px;
+            text-align: center;
+            background-color: linen;
+            color: blue;
+            font-size: 50px;
+        }
+    </style>
 
-			num : 0,
-			num1 : 0,
-			num2 : 0,
+    <script type="text/javascript">
+      const gambling = ( () => {
+        const state = new Proxy({
+          num1: 0,
+          num2: 0,
+          num3: 0,
+        }, {
+          set(obj, prop, value) {
+            const oldProp = obj[prop];
+            if(oldProp === value) return true;
+            obj[prop] = value;
+            render();
+            return true;
+          }
+        });
 
-			doA: function(){
-			if(this.counter != 1){
-			var obj = document.getElementById('num1');
-			var num = Math.floor(Math.random() * 2) + 1 ;
-			obj.innerHTML = num;
-			// this.counter ++;
-			this.num = num;
-		}
-	},
-	doB : function(){
-			if(this.counter1 != 1){
-			var obj = document.getElementById('num2');
-			var num = Math.floor(Math.random() * 2) + 1 ;
-			obj.innerHTML = num;
-			// this.counter1 ++;
-			this.num1 = num;
-		}
-	},
-		doC : function(){
-			if(this.counter2 != 1){
-			var obj = document.getElementById('num3');
-			var num = Math.floor(Math.random() * 2) + 1 ;
-			obj.innerHTML = num;
-			// this.counter2 ++;
-			this.num2 = num;
-		}
-	},
+        function updator() {
+          const element = this;
+          const number = Math.floor(Math.random() * 2) + 1;
+          state[element.id] = number;
+        }
 
-};
-</script>
+        function render() {
+          document.getElementById('num1').innerText = String(state.num1);
+          document.getElementById('num2').innerText = String(state.num2);
+          document.getElementById('num3').innerText = String(state.num3);
+          document.getElementById('result').innerText =
+            (state.num1 === state.num2 && state.num1 === state.num3) ? 'SUCCESS....' : 'FAIL....';
+        }
+
+        document.getElementById('num1').addEventListener('click', updator);
+        document.getElementById('num2').addEventListener('click', updator);
+        document.getElementById('num3').addEventListener('click', updator);
+      });
+      window.addEventListener('DOMContentLoaded', gambling);
+    </script>
 </head>
-
-
 <body>
-
-	<div align="center">한자리씩 눌르자 맞으면 잭팟 !!!</div>
-	<hr>
-
-	<div style="border: 2px solid pink; padding: 5px; text-align: center; background-color: linen; color: blue; font-size: 50px;">
-		<span id="num1" onclick="gambling.doA()">0 </span> <span id="num2" onclick="gambling.doB()">0 </span> <span id="num3" onclick="gambling.doC()">0 </span>
-	</div>
-
-	<div id="resultBox">
-		<script type="text/javascript">
-			if(gambling.num == gambling.num1 == gambling.num2){
-				document.write("SUCCESS....");
-			}
-			else
-				document.write("FAIL....");
-		</script>
-	</div>
-
-
-
+<div align="center">한자리씩 눌르자 맞으면 잭팟 !!!</div>
+<hr>
+<div id="clickBox">
+    <span id="num1">0</span>
+    <span id="num2">0</span>
+    <span id="num3">0</span>
+</div>
+<div id="resultBox">
+    <p id="result">FAIL....</p>
+</div>
 </body>
-
 </html>
